{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 31,
  "lineage": "295927da-2340-b14d-c673-ecdefa090f9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-ec2-instances-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:311846519160:instance/i-0a0d66fcfb68d890c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0d66fcfb68d890c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03499dfce36ddb033",
            "private_dns": "ip-10-0-0-19.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.19",
            "public_ip": "35.168.32.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01e24ca7a5ab3a82a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d992a05c32457a00",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df51a7b7b2a5c301"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform-SG1",
            "aws_subnet.terraform-subnet-1",
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-ec2-instances-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:311846519160:instance/i-031d1efa942c45820",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031d1efa942c45820",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09631b39a4659d1e9",
            "private_dns": "ip-10-0-1-215.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.215",
            "public_ip": "44.202.111.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a2195fbb1cd411e3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7ff2fcebcfbb2a9",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df51a7b7b2a5c301"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform-SG1",
            "aws_subnet.terraform-subnet-2",
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311846519160:internet-gateway/igw-0c6fd29364ed22fc0",
            "id": "igw-0c6fd29364ed22fc0",
            "owner_id": "311846519160",
            "vpc_id": "vpc-0f0640d72bd9f5827"
          },
          "dependencies": [
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:311846519160:loadbalancer/app/terraform-alb/835205c5a9a17a5d",
            "arn_suffix": "app/terraform-alb/835205c5a9a17a5d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-alb-2050987630.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:311846519160:loadbalancer/app/terraform-alb/835205c5a9a17a5d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0df51a7b7b2a5c301"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b7ff2fcebcfbb2a9"
              },
              {
                "subnet_id": "subnet-0d992a05c32457a00"
              }
            ],
            "subnets": [
              "subnet-0b7ff2fcebcfbb2a9",
              "subnet-0d992a05c32457a00"
            ],
            "vpc_id": "vpc-0f0640d72bd9f5827",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.terraform-SG1",
            "aws_subnet.terraform-subnet-1",
            "aws_subnet.terraform-subnet-2",
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terraform-tg-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:311846519160:listener/app/terraform-alb/835205c5a9a17a5d/4cca487d28f6b0a1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:311846519160:targetgroup/terraform-target-groups/00cc9b58f4b15367",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:311846519160:listener/app/terraform-alb/835205c5a9a17a5d/4cca487d28f6b0a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:311846519160:loadbalancer/app/terraform-alb/835205c5a9a17a5d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform-alb",
            "aws_lb_target_group.terraform-target-groups",
            "aws_security_group.terraform-SG1",
            "aws_subnet.terraform-subnet-1",
            "aws_subnet.terraform-subnet-2",
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terraform-target-groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:311846519160:targetgroup/terraform-target-groups/00cc9b58f4b15367",
            "arn_suffix": "targetgroup/terraform-target-groups/00cc9b58f4b15367",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:311846519160:targetgroup/terraform-target-groups/00cc9b58f4b15367",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-target-groups",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f0640d72bd9f5827"
          },
          "dependencies": [
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "terraform-tg-attacehment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:311846519160:targetgroup/terraform-target-groups/00cc9b58f4b15367-20240612151300111600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:311846519160:targetgroup/terraform-target-groups/00cc9b58f4b15367",
            "target_id": "i-0a0d66fcfb68d890c"
          },
          "dependencies": [
            "aws_instance.terraform-ec2-instances-1",
            "aws_lb_target_group.terraform-target-groups",
            "aws_security_group.terraform-SG1",
            "aws_subnet.terraform-subnet-1",
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-route-tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311846519160:route-table/rtb-0a7c927bb4ccf8065",
            "id": "rtb-0a7c927bb4ccf8065",
            "owner_id": "311846519160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6fd29364ed22fc0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f0640d72bd9f5827"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-route-table-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ccf391afbcf8efc",
            "route_table_id": "rtb-0a7c927bb4ccf8065",
            "subnet_id": "subnet-0d992a05c32457a00"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_route_table.terraform-route-tables",
            "aws_subnet.terraform-subnet-1",
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-route-table-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6bcc606540ae165",
            "route_table_id": "rtb-0a7c927bb4ccf8065",
            "subnet_id": "subnet-0b7ff2fcebcfbb2a9"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_route_table.terraform-route-tables",
            "aws_subnet.terraform-subnet-2",
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-SG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311846519160:security-group/sg-0df51a7b7b2a5c301",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df51a7b7b2a5c301",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-SG1",
            "name_prefix": "",
            "owner_id": "311846519160",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Websg"
            },
            "tags_all": {
              "name": "Websg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0640d72bd9f5827"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311846519160:subnet/subnet-0d992a05c32457a00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d992a05c32457a00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "311846519160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f0640d72bd9f5827"
          },
          "dependencies": [
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311846519160:subnet/subnet-0b7ff2fcebcfbb2a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7ff2fcebcfbb2a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "311846519160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f0640d72bd9f5827"
          },
          "dependencies": [
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311846519160:vpc/vpc-0f0640d72bd9f5827",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a83b45c39edf0e7f",
            "default_route_table_id": "rtb-03c30d9b6891674b5",
            "default_security_group_id": "sg-05a5b319af868d381",
            "dhcp_options_id": "dopt-0830eddba774d28d3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0640d72bd9f5827",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c30d9b6891674b5",
            "owner_id": "311846519160"
          }
        }
      ]
    }
  ]
}